syntax = "proto3";

option csharp_namespace = "BalanceMicroservice";


service GetBalanceService {
	rpc GetBalance(GetBalanceRequest) returns (GetBalanceResponse);
}


message GetBalanceRequest {
	string id = 1;
}

message GetBalanceResponse {
	int32 balance = 1;
}
